Update to add Corsican translations

--- a/bin/setup/lang/gwd.htm
+++ b/bin/setup/lang/gwd.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Parametri di « gwd »
 de: Parameter für "gwd"
 en: Parameters for "gwd"
 es: Parámetros de gwd
@@ -24,6 +25,7 @@ sv: Parametrar för "gwd"
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Parametri di « gwd »
 de: Parameter für "gwd"
 en: Parameters for "gwd"
 es: Parámetros de gwd
@@ -44,6 +46,8 @@ sv: Parametrar för "gwd"
 <p>
 <ul><li>
 [
+co: Eccu i parametri di a cumanda « gwd ».
+    Cambiate ciò chì vi pare necessariu :
 de: Hier sind die Parameter für das Kommando "gwd". 
     Du kannst die folgenden Werte änder:
 en: Here are the parameters of the command "gwd". Change the one you
@@ -66,6 +70,7 @@ sv: Här är parametrarna för kommandot "gwd". Ändra dem som du anser
 <tr align=left>
 <td valign=top><strong>-lang</strong></td>
 <td>[
+co: Lingua predefinita.
 de: Standardsprache.
 en: Default language.
 es: Lenguaje por defecto.
@@ -78,6 +83,9 @@ sv: Förvalt språk.
 <p>
 
 [
+co: Di regula, tutte e pagine di e base
+    di dati sò affissate in sta lingua.
+	Selezziunate a vostra lingua preferita.
 de: Standardmäßig werden alle Seiten der Datenbank in dieser Sprache
     dargestellt. Wähle deine bevorzugte Sprache.
 en: By default, all the pages of the databases are displayed in this language.
@@ -97,6 +105,12 @@ sv: Alla sidor för databasen visas i detta språk. Välj det språk du föredra
 <p>
 
 [
+co: Per una basa di dati particulare, si pò dinù cambià
+    sta scelta cunfigurendu parametri specifichi à sta
+	basa di dati. È nant’à a pagina d’accolta di a basa,
+	si pò ancu sceglie un’altra bandera per selezziunà
+	un’altra lingua. Quessa scelta hè dunque una specia
+	di lingua « predefinita predefinita ».
 de: Bei einer gegebenen Datenbank kann diese Auswahl immer noch über
     den speziellen Aufrufparameter geändert werden. Ebenso kann auf der
     Willkommensseite durch Anklicken einer Fahne immer noch eine andere
@@ -137,6 +151,7 @@ sv: För en given databas, kan du ändå ändra detta val genom att
 <p><p>
 
 [
+co: S’è "-" hè selezziunatu, ghjè u francese.
 de: Falls "-" gewählt ist, gilt Französisch als Standardsprache.
 en: If "-" is selected, it is French.
 es: Si la selección es "-", el lenguaje por defecto es el
@@ -157,6 +172,7 @@ sv: Om "-" är valt, är det franska.
 <option value="bg"%Edefault_lang=bg;>%Lbg;
 <option value="br"%Edefault_lang=br;>%Lbr;
 <option value="ca"%Edefault_lang=ca;>%Lca;
+<option value="co"%Edefault_lang=co;>%Lco;
 <option value="cs"%Edefault_lang=cs;>%Lcs;
 <option value="da"%Edefault_lang=da;>%Lda;
 <option value="de"%Edefault_lang=de;>%Lde;
@@ -179,6 +195,7 @@ sv: Om "-" är valt, är det franska.
 <option value="ru"%Edefault_lang=ru;>%Lru;
 <option value="sl"%Edefault_lang=sl;>%Lsl;
 <option value="sv"%Edefault_lang=sv;>%Lsv;
+<option value="tr"%Edefault_lang=tr;>%Ltr;
 <option value="zh"%Edefault_lang=zh;>%Lzh;
 </select>
 </td>
@@ -189,6 +206,7 @@ sv: Om "-" är valt, är det franska.
 <tr align=left>
 <td valign=top><strong>-only</strong></td>
 <td>[
+co: Solu indirizzu auturizatu.
 de: Nur berechtigte Adressen.
 en: Only authorized address.
 es: Única dirección autorisada.
@@ -201,6 +219,8 @@ sv: Endast behöriga adresser.
 <p>
 
 [
+co: Solu e richieste pruvinendu da st’indirizzu internet
+    seranu accettate.
 de: Befehle werden nur von dieser Internet-Adresse akzeptiert.
 en: Only the requests from this Internet address are accepted.
 es: Unicamente las demandas provenientes de esta dirección
@@ -216,6 +236,10 @@ sv: Endast åtkomster från denna internet adress accepteras.
 <p>
 
 [
+co: Per sapè chì valore ci vole à sceglie per u vostru urdinatore, fighjate
+    e traccie di a cumanda « gwd » chì si trovanu in u schedariu « log »
+	(fighjate quaghjò) ogni volta chì vò navigate in una basa di dati.
+	Ci vole à mette ciò chì hè scrittu daretu u « From: ».
 de: Um herauszufinden, welchen Wert du hier für deinen Rechner einsetzen
     mußt, schaue dir die Trace-Ausgaben des Kommandos "gwd" an, die
     jedesmal ausgegeben werden, wenn du eine Abfrage an deine Datenbanken
@@ -257,6 +281,7 @@ sv: För att veta vilket värde du ska skriva in för din dator, titta på
 <tr align=left>
 <td valign=top><strong>-log</strong></td>
 <td>[
+co: Schedariu di e traccie di cunnessione.
 de: Protokolldatei für Verbindungen.
 en: Connection log file.
 es: Fichero de trazas de conección.
@@ -269,6 +294,10 @@ sv: Åtkomst loggfil.
 <p>
 
 [
+co: Di regula, e traccie di cunnessione si vedenu in a
+    finestra di « gwu ». Quandu si navigheghja, o chì
+	qualchissia accede à una di e vostre base di dati,
+	4 o 5 linee ci sò affissate.
 de: Standardmäßig werden die Verbindungs-Trace-Ausgaben in dem
     Fenster ausgegeben, in dem "gwd" läuft. Jedesmal, wenn du oder
     jemand anders auf eine deiner Datenbanken zugreift, werden dort vier
@@ -299,6 +328,11 @@ sv: Åtkomst utskriften visas i "gwd" fönstret. Varje gång
 <p>
 
 [
+co: S’è vo vulete piuttostu chì e traccie vochinu in un schedariu,
+    scrivite quì u so nome. Stu schedariu serà creatu, s’ellu ùn esiste,
+	in u cartulare principale di <font color=#2f6400><b>GeneWeb</b></font> induve
+	si trovanu e cumande « gwsetup » è « gwd ».
+	È serà allungatu à ogni richiesta.
 de: Wenn du möchtest, daß diese Daten stattdessen in einer Datei
     protokolliert werden, gib hier den gewünschten Dateinamen an.
     Die Datei wird im <font
@@ -346,6 +380,9 @@ sv: Om du istället vill att utskriften går till en fil, skriv namnet
 </table>
 <p>
 [
+co: D’altri parametri esistenu per a cumanda « gwd »,
+    ma ùn ponu micca esse cunfigurati quì, perchè elli ponu
+	disturbà u funziunamentu di « gwsetup ».
 de: Es gibt noch weitere Parameter für das Kommando "gwd",
     aber diese sind hier nicht konfigurierbar, weil sie die
     Ausführung des "gwsetup" beeinträchtigen können.
@@ -369,6 +406,12 @@ sv: Det finns andra parametrar för kommandot "gwd", men
 ]
 <p>
 [
+co: Difatti, a navigazione cù « gwsetup » hè soprattuttu
+    fatta per rende più faciule l’impiegu di
+	<font color=#2f6400><b>GeneWeb</b></font>, ma ùn permette
+	micca di sfruttane tutte e pussibilità. Per truvà l’altri
+	parametri è u so impiegu, ci vole una cria à scumbatticcià :
+	si pò truvà certe infurmazioni in a documentazione.
 de: In der Tat ist die Navigation mittels des "gwsetup" dazu gedacht, die
     Benutzung von <font color=#2f6400><b>GeneWeb</b></font> einfacher zu
     machen, nicht um alle Möglichkeiten auszuprobieren.
@@ -415,6 +458,7 @@ sv: Faktiskt, navigation med "gwsetup" är huvudsakligen för att göra
 <p>
 <li>
 [
+co: Tandu appughjate nant’à stu buttone :
 de: Dann drücke diesen Knopf:
 en: Then push this button:
 es: A continuación apoye Ud. en el botón:
@@ -427,6 +471,7 @@ sv: Tryck sedan på denna knapp:
 <p>
 
 <input type=submit value="[
+co: Cunfigurà
 de: Konfigurieren
 en: Configure
 es: Configurar
