--- a/bin/setup/lang/gwf_1.htm
+++ b/bin/setup/lang/gwf_1.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Parametri « %a »
 de: Parameter "%a"
 en: Parameters "%a"
 es: Parámetros "%a"
@@ -24,6 +25,7 @@ sv: Parametrar "%a"
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Parametri « %a »
 de: Parameter "%a"
 en: Parameters "%a"
 es: Parámetros "%a"
@@ -44,6 +46,9 @@ sv: Parametrar "%a"
 <p>
 <ul><li>
 [
+co: Eccu i parametri di a basa <a
+    href="http://%m:%P/%a">%a</a>.
+	Fate i cambiamenti di a vostra scelta :
 de: Hier sind die Parameter der Datenbank <a
     href="http://%m:%P/%a">%a</a>. 
     Nimm die geünschten Änderungen vor:
@@ -74,6 +79,10 @@ sv: Här är parametrarna för databasen <a
 
 <tr align=left>
 <td>[
+co: Permette di cunfigurà i culori di u fondu, di metteci un mudellu,
+    o di cambià u culore di u testu o di i liami. A so sintassa hè
+	quella di HTML accettata in l’etichetta "&lt;body&gt;" nanzu u ">".
+	Fighjà a vostra documentazione HTML. Esempiu :
 de: Erlaubt die Änderung der Hintergrundfarbe oder das Hinzufügen
     eines Hintergrundmusters, sowie das Ändern der Farbe von Text und
     Links. Seine Syntax entspricht der, die im HTML im 
@@ -111,6 +120,7 @@ sv: Gör det möjligt att ändra bakgrunds färgen, att sätta in ett bakgrunds
 <p>
 
 [
+co: Qualchì variabile interessante…
 de: Ein paar interessante Variablen… 
 en: Some interesting variables…
 es: Algunas variable interesantes…
@@ -123,6 +133,8 @@ sv: Några intressanta variabler…
 <ul>
 <li>background:
 [
+co: fiura di fondu (fighjate a <a
+    href="gwsetup?lang=%l;o=%a;v=backg.htm">nota</a>)
 de: Hintergrundbild (siehe auch diesen <a
     href="gwsetup?lang=%l;o=%a;v=backg.htm">Hinweis</a>)
 en: background image (see the <a
@@ -141,6 +153,7 @@ sv: bakgrundsbild (se <a
 
 <li>bgcolor:
 [
+co: culore di fondu
 de: Hintergrundfarbe
 en: background color
 es: color de fondo
@@ -152,6 +165,7 @@ sv: bakgrundsfärg
 
 <li>text:
 [
+co: culore di u testu
 de: Textfarbe
 en: text color
 es: color del texto
@@ -163,6 +177,7 @@ sv: textfärg
 
 <li>link:
 [
+co: culore di i liami
 de: Linkfarbe
 en: links color
 es: color de los enlaces
@@ -174,6 +189,7 @@ sv: länkfärg
 
 <li>vlink:
 [
+co: culore di i liami dighjà visitati
 de: Farbe für bereits besuchte Links
 en: color of already visited links
 es: color de los enlaces que ya han sido visitados
@@ -188,6 +204,7 @@ sv: färg för de redan besökta länkarna
 <p>
 
 [
+co: Pudete dinù selezziunà una di l’aggalabate di culore pruposte.
 de: Du kannst auch eine der vorgeschlagenen Farbkombinationen wählen.
 en: You can also select one of the proposed colors combinations.
 es: Ud. puede asi mismo seleccionar una de las combinaciones de colores
@@ -204,6 +221,8 @@ sv: Du kan också välja en av följande föreslagna färg kombinationer.
 <p>
 
 [
+co: Què ùn s’appiecherà micca solu à a pagina d’accolta ma dinù
+    à tutte e pagine affissate di sta basa di dati.
 de: Diese Konfiguration gilt nicht nur für die Willkommensseite,
     sondern für alle Seiten dieser Datenbank.
 en: This applies not only to the welcome page but to all the displayed pages
@@ -421,6 +440,7 @@ value="bgcolor=#CC0000 text=#FFFFFF link=#FFFF00 vlink=#00FFFF">
 
 <tr align=left>
 <td>[
+co: Lingua predefinita.
 de: Standardsprache.
 en: Default language.
 es: Lenguaje por defecto.
@@ -433,6 +453,8 @@ sv: Förvalt språk.
 <p>
 
 [
+co: S’ella hè "-", ghjè a lingua predefinita di a cumanda « gwd »
+    chì serà impiegata.
 de: Wenn dieser Wert "-" ist, wird die Standardsprache des Kommandos "gwd"
     verwendet.
 en: If it is "-", the default language of the command "gwd" is applied.
@@ -456,6 +478,7 @@ sv: Om det är "-", kommer det förvalda språket för kommandot "gwd" att gäll
 <option value="bg"%Edefault_lang=bg;>%Lbg;
 <option value="br"%Edefault_lang=br;>%Lbr;
 <option value="ca"%Edefault_lang=ca;>%Lca;
+<option value="co"%Edefault_lang=co;>%Lco;
 <option value="cs"%Edefault_lang=cs;>%Lcs;
 <option value="da"%Edefault_lang=da;>%Lda;
 <option value="de"%Edefault_lang=de;>%Lde;
@@ -478,6 +501,7 @@ sv: Om det är "-", kommer det förvalda språket för kommandot "gwd" att gäll
 <option value="ru"%Edefault_lang=ru;>%Lru;
 <option value="sl"%Edefault_lang=sl;>%Lsl;
 <option value="sv"%Edefault_lang=sv;>%Lsv;
+<option value="tr"%Edefault_lang=tr;>%Ltr;
 <option value="zh"%Edefault_lang=zh;>%Lzh;
 </select>
 </td>
@@ -490,6 +514,7 @@ sv: Om det är "-", kommer det förvalda språket för kommandot "gwd" att gäll
 <tr align=left><td><strong>- max_anc_level -</strong></td></tr>
 <tr align=left>
 <td>[
+co: Livellu massimu per l’affissera di l’antenati.
 de: Maximale Stufe bei der Anzeige von Vorfahren.
 en: Maximum level when displaying ancestors.
 fr: Niveau maximum dans l’affichage des ascendants.
@@ -499,6 +524,9 @@ it: Livello massimo di visualizzazione degli antenati.
 <p>
 
 [
+co: Quandu s’affisseghjanu l’antenati, què limiteghja u
+    numeru di generazioni. U numeru predefinitu hè 8,
+	ma si pò indicà quì un altru valore.
 de: Wenn Vorfahren angezeigt werden, soll die Anzahl der angezeigten
     Generationen limitiert werden. Per Default ist die Anzahl acht
     Generationen, aber du kannst hier eine andere Anzahl einstellen.
@@ -528,6 +556,7 @@ size=5></td>
 <tr align=left><td><strong>- max_desc_level -</strong></td></tr>
 <tr align=left>
 <td>[
+co: Livellu massimu per l’affissera di i discendenti.
 de: Maximale Stufe bei der Anzeige von Nachfahren.
 en: Maximum level when displaying descendants.
 fr: Niveau maximum dans l’affichage des descendants.
@@ -537,6 +566,9 @@ it: Livello massimo di visualizzazione dei discendenti.
 <p>
 
 [
+co: Quandu s’affisseghjanu i discendenti, què limiteghja u
+    numeru di generazioni. U numeru predefinitu hè 12,
+	ma si pò indicà quì un altru valore.
 de: Wenn Nachfahren angezeigt werden, soll die Anzahl der angezeigten
     Generationen limitiert werden. Per Default ist die Anzahl zwölf
     Generationen, aber du kannst hier eine andere Anzahl einstellen.
@@ -566,6 +598,7 @@ size=5></td>
 <tr align=left><td><strong>- max_anc_tree -</strong></td></tr>
 <tr align=left>
 <td>[
+co: Livellu massimu à l’arburu per l’affissera di l’antenati.
 de: Maximale Stufe bei der Anzeige von Vorfahren als Baum.
 en: Maximum level when displaying ancestors by tree.
 fr: Niveau maximum dans l’affichage des ascendants par arbre.
@@ -575,6 +608,9 @@ it: Livello massimo di visualizzazione degli antenati per albero.
 <p>
 
 [
+co: Quandu s’affisseghja l’arburu cù l’antenati, què limiteghja u
+    numeru di generazioni. U numeru predefinitu hè 7,
+	ma si pò indicà quì un altru valore.
 de: Wenn Vorfahren in Baumstruktur angezeigt werden, soll die Anzahl der 
     angezeigten Generationen limitiert werden. Per Default ist die Anzahl 
     sieben Generationen, aber du kannst hier eine andere Anzahl einstellen.
@@ -604,6 +640,7 @@ size=5></td>
 <tr align=left><td><strong>- max_desc_tree -</strong></td></tr>
 <tr align=left>
 <td>[
+co: Livellu massimu à l’arburu per l’affissera di i discendenti.
 de: Maximale Stufe bei der Anzeige von Nachkommen als Baum.
 en: Maximum level when displaying descendants by tree.
 fr: Niveau maximum dans l’affichage des descendants par arbre.
@@ -613,6 +650,9 @@ it: Massimo livello della visualizzazione dei discendenti per albero.
 <p>
 
 [
+co: Quandu s’affisseghja l’arburu cù i discendenti, què limiteghja u
+    numeru di generazioni. U numeru predefinitu hè 4,
+	ma si pò indicà quì un altru valore.
 de: Wenn Nachkommen in Baumstruktur angezeigt werden, soll die Anzahl der 
     angezeigten Generationen limitiert werden. Per Default ist die Anzahl 
     vier Generationen, aber du kannst hier eine andere Anzahl einstellen.
@@ -642,6 +682,7 @@ size=5></td>
 <tr align=left><td><strong>- history -</strong></td></tr>
 <tr align=left>
 <td>[
+co: Cronolugia di e mudificazioni
 de: Änderungshistorie
 en: History of updates
 fr: Historique des mises à jour
@@ -651,6 +692,14 @@ it: Riassunto degli aggiornamenti
 <p>
 
 [
+co: Dumandà d’affissà e mudificazioni nant’à a pagina d’accolta
+    sottu u liame « cronolugia di e mudificazioni ».
+    <p>
+	Rimarca (technica) : e traccie di e mudificazioni sò arregistrate
+	in u schedariu chì si chjama « history » in u cartulare di a
+	basa di dati (%a.gwb). A so dimensione cresce indefinitamente.
+	Pudete mudificallu per caccià e vechje infurmazioni.
+	O pudete dinù squassallu per riparte à viotu.
 de: Auf der Startseite auf Änderungen mit einem Link
     "Änderungshistorie" hinweisen.
     <p>
@@ -700,6 +749,7 @@ it: Domanda d'indicare gli aggiornamenti nella pagina di benvenuto
 <tr align=left><td><strong>- images_path -</strong></td></tr>
 <tr align=left>
 <td>[
+co: Chjassu d’accessu à e fiure
 de: Bildpfad
 en: Images path
 fr: Chemin d’accès aux images
@@ -709,6 +759,19 @@ it: Path che porta alle immagini
 <p>
 
 [
+co: S’è ùn vulete micca chì e vostre fiure sianu installate
+    in u locu predefinitu (cartulare di e base,
+	sottu-cartulare « images », sottu-sottu-cartulare « %a »),
+	indicate quì u chjassu d’accessu à u cartulare chì vò vulete
+	impiegà. Stu chjassu d’accessu hè un indirizzu URL : s’è ghjè
+	un situ web, u chjassu deve principià da <tt>http://</tt> è in
+	casu di cartulare lucale, u principiu serà <tt>file://</tt>.
+    <p>
+    Què hè vera solu per e fiure chì sò indicate in u campu
+	« image » di u furmulariu di e persone. Ùn ghjova micca
+	per e fiure installate da u liame « mandà fiure » chì,
+	elle, sò installate cù un nome predefinitu in u cartulare
+	predefinitu.
 de: Wenn Du NICHT möchtest, dass deine Bilder am Standardort
     (Datenbankverzeichnis, Unterverzeichnis "images",
     Unter-Unterverzeichnis "%a") abgelegt werden, gib hier den Pfad zu
@@ -770,6 +833,7 @@ size=50></td>
 <tr align=left><td><strong>- hide_advanced_request -</strong></td></tr>
 <tr align=left>
 <td>[
+co: Piattà a richiesta esperta
 de: Erweiterte Suche verbergen.
 en: Hide advanced request.
 fr: Cacher la requête évoluée.
@@ -779,6 +843,9 @@ it: Nascondere la richiesta avanzata.
 <p>
 
 [
+co: A richiesta esperta permette di fà ricerche cù criterii
+    nant’à a basa. Cum’è hè assai incompleta, hè predefinita piattata.
+    Selezziunate « Innò » quaghjò per rimettela.
 de: Die erweiterte Suche erlaubt es, Recherchen gemäß
     bestimmter Kriterien auf der Datenbank durchzuführen.
     Da sie sehr unvollständig implementiert it, ist sie per
@@ -814,6 +881,7 @@ value="no"%Chide_advanced_request=no;>[yes/no]1
 
 <tr align=left>
 <td>[
+co: Parolla d’entrata « amicu »
 de: Kennwort für "Freunde".
 en: Password for "friends".
 es: Contraseña "amigo".
@@ -826,6 +894,10 @@ sv: Passord för "friends".
 <p>
 
 [
+co: L’« amichi » ponu vede tutte e date, note è fotò di e
+    persone chì sò nate dapoi menu d’un seculu. Quelli chì ùn
+	anu micca pruvistu a parolle d’entrata quaghjò ùn videranu
+	micca st’infurmazioni.
 de: "Freunde" können alle Daten, Notizen und Fotos von Personen sehen, die
     vor weniger als einem Jahrhundert geboren wurden.
     Wer dieses Kennwort nicht eingegeben hat, kann diese Informationen nicht
@@ -855,6 +927,9 @@ sv: "Friends" kan se alla datum, noteringar och bilder för personer födda
 <p>
 
 [
+co: S’è st’aghja hè viota, tutti sò « amichi ». Pudete
+    lascià viota st’aghja s’è u vostru urdinatore ùn hè
+	micca accessibile da fora.
 de: Wenn dieser Eintrag leer bleibt, ist jeder ein "Freund".
 en: If this area is empty, everybody is a "friend". You can leave
     this area empty if your computer is not accessible from outside.
@@ -887,6 +962,7 @@ size=30></td>
 
 <tr align=left>
 <td>[
+co: Parolla d’entrata « magu »
 de: Kennwort für "Wizards".
 en: Password for "Wizards".
 es: Contraseña "mago".
@@ -899,6 +975,8 @@ sv: Passord för "Wizards".
 <p>
 
 [
+co: D’altronde, i « maghi » ponu fà mudificazioni
+    in a basa di dati.
 de: "Wizards" können darüberhinaus auch Änderungen an
     der Datenbank machen.
 en: "Wizards" can moreover make modifications in the database.
@@ -915,6 +993,9 @@ sv: "Wizards" kan göra modifieringar i databasen.
 <p>
 
 [
+co: S’è st’aghja hè viota, tutti sò « maghi ». Pudete
+    lascià viota st’aghja s’è u vostru urdinatore ùn hè
+	micca accessibile da fora.
 de: Wenn dieser Eintrag leer bleibt, ist jeder ein "Wizard".
 en: If this area is empty, everybody is a "wizard". You can leave
     this area empty if your computer is not accessible from outside.
@@ -945,6 +1026,7 @@ size=30></td>
 
 <tr align=left>
 <td>[
+co: I « maghi » diventanu « amichi » simplice.
 de: "Wizards" werden zu "Freunden".
 en: "Wizards" become simple "friend".
 es: Los "magos" se transforman en simples "amigos".
@@ -957,6 +1039,7 @@ sv: "Wizards" blir enkla "friend".
 <p>
 
 [
+co: S’ella hè vera, i « maghi » perdenu u so putere di mudificazione.
 de: Wenn dieser Wert auf "ja" steht, verlieren "Wizards" die Berechtigung,
     Änderungen zu machen.
 en: If yes, the "wizards" loose their power to make updates.
@@ -971,6 +1054,11 @@ sv: Om "Yes", förlorar "wizards" deras behörighet att göra uppdateringar.
 <p>
 
 [
+co: St’ozzione pò esse ghjuvevule, timpurariamente, quandu si face
+    una nettata di a vostra basa di dati, s’ella hè acciduta da Internet,
+	per impedisce chì certi « maghi » faccianu mudificazioni chì serianu
+	perse durante l’operazione (ma arricurdatevi di squassà st’ozzione
+	dopu a nettata).
 de: Dies kann sinnvoll sein, um z. B. beim Aufräumen der Datenbank,
     wenn sie über das Internet zugreifbar ist, temporär zu
     vermeiden, daß "Wizards" Daten ändern, die durch die
@@ -1029,6 +1117,7 @@ sv: Detta kan vara användbart, temporärt, när du gör en upprensning av din
 
 <tr align=left>
 <td>[
+co: Piattà i nomi di e persone private.
 de: Namen der zeitgenössischen Personen verbergen.
 en: Hide the private person's names.
 fr: Cacher les noms des personnes privées.
@@ -1038,6 +1127,8 @@ it: Nascondere i nomi delle persone private.
 <p>
 
 [
+co: Piattà i nomi di e persone private, vale à dì e persone vive,
+    o più precisamente, quelle di menu di 100 anni.
 de: Verberge die Namen zeitgenössischer Personen, d.h. die Namen
     der Personen, die noch leben, oder genauer, die Personen, die
     jüger als ein Jahrhundert sind.
@@ -1070,6 +1161,7 @@ it: Nasconde i nomi delle persone private, ovvero le persone in vita
 
 <tr align=left>
 <td>[
+co: Pussibilità di mandà fiure.
 de: Erlaubnis, Bilder zu senden.
 en: Ability to send images.
 es: Posibilidad de enviar imágenes.
@@ -1082,6 +1174,8 @@ sv: Möjlighet att sända en bild.
 <p>
 
 [
+co: S’ella hè vera, i « maghi » sò auturizati à mandà fiure
+    via a reta.
 de: Wenn dieser Parameter auf "Ja" gesetzt wird, haben "Wizards" die
     Berechtigung, Bilder hochzuladen.
 en: If yes, the "wizards" are authorized to upload images.
@@ -1098,6 +1192,9 @@ sv: Om "Yes", har "wizards" behörighet att sända bilder.
 <p>
 
 [
+co: Pò esse ghjuvevule in lucale per pudè assucià una fiura
+    à qualchissia, perchè a prucedura installeghja autumaticamente
+	a fiura à a so piazza cù u nome appostu.
 de: Dies kann auch bei lokalem Zugiff sinnvoll sein, um Bilder für
     jemanden
     zu installieren, da die Funktion das Bild automatisch mit dem richtigen
@@ -1144,6 +1241,7 @@ sv: Det kan vara användbart lokalt, när man vill sätta in en bild av någon,
 
 <tr align=left>
 <td>[
+co: A basa hè stata rinuminata.
 de: Datenbank wurde umbenannt.
 en: Base has been renamed.
 es: Cambio de nombre de la base.
@@ -1156,6 +1254,12 @@ sv: Databasen har blivit omdöpt.
 <p>
 
 [
+co: S’è vò avete cambiatu u nome di a vostra basa di dati, ma chì ghjè
+    una basa chì esiste dapoi un pezzu, è chì vò pensate chì tamanta ghjente
+	ci hà messu liami annantu, cunservate stu schedariu di parametri
+	per sta basa è indicate quaghjò u novu nome di a basa. A ghjente chì
+	cunsulterà a basa di dati cù u vechju nome riceverà una pagina chì
+	ci indicherà u novu nome à impiegà cù a so stessa richiesta clicchevule.
 de: Wenn du den Namen deiner Datenbank geändert hast, diese Datenbank aber
     schon seit langer Zeit bestand und du glaubst, daß viele Leute
     Links auf sie gemacht haben, dann behalte die Parameterdatei und trage
@@ -1204,6 +1308,7 @@ sv: Om du ändrar namnet på din databas, men databasen har funnits
 <p>
 
 [
+co: S’è st’aghja hè viota, a basa di dati ùn hè micca stata rinuminata.
 de: Wenn dieses Feld leer ist, wurde die Datenbank nicht umbenannt.
 en: If this area is empty, the database has not been renamed.
 es: Si esta zona permanece vacia, la base no cambiará de nombre.
@@ -1227,6 +1332,8 @@ sv: Om den är tom, har databasen inte blivit omdöpt.
 <tr align=left>
 <td>
 [
+co: S’è vo vulete chì un testu sia scrittu à u bassu d’ogni pagina,
+    scrivitelu puru quì. Pudete metteci dentru etichette HTML.
 de: Wenn Du möchtest, daß ein bestimmter Text am Ende jeder
     Seite angezeigt wird, gib ihn hier an. Du kannst HTML-Tags benutzen.
 en: If you want that a text appears in the bottom of each page, write it
@@ -1259,6 +1366,7 @@ sv: Om du vill att en text ska synas längst ner på varje sida, skriv den här.
 <p>
 <li>
 [
+co: Tandu appughjate nant’à stu buttone :
 de: Dann drücke diesen Knopf:
 en: Then push this button:
 es: Apoye a continuación en este botón:
@@ -1271,6 +1379,7 @@ sv: Tryck sedan på denna knapp:
 <p>
 
 <input type=submit value="[
+co: Appiecà
 de: Ausführen
 en: Apply
 es: Aplicar
