--- a/bin/setup/lang/gwu.htm
+++ b/bin/setup/lang/gwu.htm
@@ -143,6 +143,14 @@ sv: Välj de optioner du vill ha:
 
 <table class="setup">
 <tr align=left>
+<td><input type=checkbox name=isolated value="on">   </td>
+<td>[extract isolated persons]</td>
+</tr>
+</table>
+<p>
+
+<table class="setup">
+<tr align=left>
 <td><input type=checkbox name=mem value="on">   </td>
 <td>[
 de: Während der Operation sparsam mit dem Speicher umgehen
