--- a/bin/setup/lang/gwu.htm
+++ b/bin/setup/lang/gwu.htm
@@ -151,17 +151,16 @@ sv: Välj de optioner du vill ha:
 
 <table class="setup">
 <tr align=left>
-
-<td><input type=checkbox name=isolated value="on">   </td>
-<td>[extract isolated persons]</td>
+<td><input type=checkbox name=gwplus value="on">   </td>
+<td>[force use of gwplus format]</td>
 </tr>
 </table>
 <p>
 
 <table class="setup">
 <tr align=left>
-<td><input type=checkbox name=gwplus value="on">   </td>
-<td>[force use of gwplus format]</td>
+<td><input type=checkbox name=old_gw value="on">   </td>
+<td>[force use of old_gw format]</td>
 </tr>
 </table>
 <p>
