Fix typos for Corsican and Turkish languages

--- a/bin/setup/lang/gwd.htm
+++ b/bin/setup/lang/gwd.htm
@@ -56,7 +56,7 @@ refore like a "default default" language.
 <option value="br"%Edefault_lang=br;>%Lbr;
 <option value="ca"%Edefault_lang=ca;>%Lca;
 <option value="cs"%Edefault_lang=cs;>%Lcs;
-<option value="co"%Edefault_lang=cs;>%Lco;
+<option value="co"%Edefault_lang=co;>%Lco;
 <option value="da"%Edefault_lang=da;>%Lda;
 <option value="de"%Edefault_lang=de;>%Lde;
 <option value="en"%Edefault_lang=en;>%Len;
@@ -78,7 +78,7 @@ refore like a "default default" language.
 <option value="ru"%Edefault_lang=ru;>%Lru;
 <option value="sl"%Edefault_lang=sl;>%Lsl;
 <option value="sv"%Edefault_lang=sv;>%Lsv;
-<option value="tr"%Edefault_lang=sv;>%Ltr;
+<option value="tr"%Edefault_lang=tr;>%Ltr;
 <option value="zh"%Edefault_lang=zh;>%Lzh;
 </select>
 </td>
